# MulticopterSim

./: .gitignore  CMakeLists.txt  FlightManager.cpp  FlightModule.Build.cs  GimbalManager.cpp  HackflightFlightManager.hpp  HackflightSim.uproject  JoystickGimbalManager.hpp  Makefile  MultiSim.sln  MultiSim.uproject  MulticopterSim.code-workspace  MulticopterSim.kdev4  MulticopterSim.pro  MulticopterSim.uproject  MulticopterSim.workspace  MulticopterSimCodeCompletionFolders.txt  MulticopterSimCodeLitePreProcessor.txt  MulticopterSimConfig.pri  MulticopterSimDefines.pri  MulticopterSimHackflight.uproject  MulticopterSimHeader.pri  MulticopterSimIncludes.pri  MulticopterSimSource.pri  README.md  SimBoard.hpp  SimPlugin.Build.cs  SimReceiver.hpp  SimSensors.hpp  TargetController.cpp  TargetManager.cpp  VideoManager.cpp  build.sh  clean.bat  clean.sh  cleanup.sh  hackflight.bat  makefile  reset.sh  run.sh  (+8 more)
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Extras/attic/: run.sh
FlightControllers/: README.md
FlightControllers/rust/: .gitignore  Cargo.toml  README.md
FlightControllers/rust/src/: main.rs
Proxy/: .gitignore  Makefile  cfproxy.cpp  simproxy.cpp
Simulator/: .vsconfig  MultiSim.uproject  clean.bat
Simulator 5.1/: MultiSim.uproject
Source/: HackflightSim.Target.cs  HackflightSimEditor.Target.cs  MulticopterSim.Target.cs  MulticopterSimEditor.Target.cs  MulticopterSimHackflight.Target.cs  MulticopterSimHackflightEditor.Target.cs  MulticopterSimSocket.Target.cs  MulticopterSimSocketEditor.Target.cs
attic/: HackflightSimReceiverLinux.h
(+1382 files in other folders)
