[package]
name = "multisim-hackflight-rust"
version = "0.1.1"
authors = ["Simon D. Levy<simon.d.levy@gmail.com>"]
license = "MIT"
description = "MultiSim flight-control server using Hackflight algorithms"
documentation = "https://github.com/simondlevy/MultiSim/FlightControllers/rust"
repository = "https://github.com/simondlevy/MultiSim"
readme = "README.md"

[dependencies]
hackflight = "0.1.2"
